# TRND

./: .eslintrc.json  .gitignore  README.md  TRND.ui  additional_style.css  build.bat  bun.lockb  main.py  package.json  pnpm-lock.yaml  requirements.txt  tailwind.config.cjs  tsconfig.json  ui.config.json  vite.config.ts  wiki_parser.py  window.py
data/: TRND.ru.qm  TRND.ui  additional_style.css  main_window.ui  tarkov_theme.xml
libs/: application.py  consts.py  main_window.py  qt_extends.py  trnd.py  utils.py  wiki_parser.py  window.py
src/: index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/assets/: tarkov_dev_items.graphql  tarkov_schema.json
src-tauri/src/commands/: mod.rs  tarkov_data.rs  weapon_generator.rs
src-tauri/src/infrastructure/: mod.rs  weapon_manager.rs
src-tauri/src/infrastructure/api/: mod.rs  tarkov_api.rs
src-tauri/src/models/: mod.rs  progress.rs  tarkov.rs  weapon.rs
src-tauri/src/utilities/: tauri.rs
src/app/: App.tsx  AppRouter.tsx  app.css  index.ts
src/app/model/: index.ts  tarkovDataContext.ts
src/app/ui/TarkovDataContextProvider/: TarkovDataContextProvider.tsx  index.ts
src/entities/tarkov/api/: index.ts  tarkovApi.ts
src/entities/tarkov/lib/: generateWeapon.ts  index.ts  listenTarkovProgress.ts  updateTarkovData.ts
src/entities/tarkov/model/: interfaces.ts
src/entities/tarkov/ui/: index.ts
src/entities/weapon/ui/: index.ts
src/shared/config/: tailwind.config.ts  ui.preset.ts
src/shared/ui/components/: index.ts
tests/: test_main_window.py  test_utils.py
(+33 files in other folders)
